deploy/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: andromeda
  labels:
    app.kubernetes.io/name: andromeda
